Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9346

replay-single: replay of PFL file open failure

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.10.0
    • Lustre 2.10.0
    • 3
    • 9223372036854775807

      This issue was created by maloo for bobijam <bobijam.xu@intel.com>

      Please provide additional information about the failure here.

      This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/f2d00afc-204a-11e7-9073-5254006e85c2.

      During replay of PFL file open, lod_qos_parse_config()->lod_use_defined_striping() initialed stripe LU-objects, but it keeps the component's LCME_FL_INIT flag; and later in lod_striping_create() these component will be skipped create OST objects, that fails the replay, it should replay creating its OST objects.

            bobijam Zhenyu Xu
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: