LU-9346 lod: replay of PFL file open failure

During replay of PFL file open, lod_qos_parse_config()->
lod_use_defined_striping() initialed stripe LU-objects, but it keeps
the component's LCME_FL_INIT flag; and later in lod_striping_create()
these component will be skipped create OST objects, that fails the
replay, it should replay creating its OST objects.

Signed-off-by: Bobi Jam <bobijam.xu@intel.com>
Change-Id: Ic84374941df7a14b53e463f6117d5fbb9995c33d
Reviewed-on: https://review.whamcloud.com/26630
Reviewed-by: Niu Yawei <yawei.niu@intel.com>
Tested-by: Jenkins
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>